# kubernetes-camp-website

./: CNAME  README.md  _config.yml  index.md
docker/: docker-compose.yaml
docker/cpp/: CMakeLists.txt  Dockerfile  main.cpp
docker/go/: .dockerignore  Dockerfile  api.go  go.mod
docker/java/: Dockerfile  pom.xml
docker/nodejs/: Dockerfile  index.js  package-lock.json  package.json
exam/: README.md  docker-compose.yaml
kubernetes/01-pod/: pod.yaml
kubernetes/02-replicaset/: replicaset.yaml
kubernetes/04-service/: service.yaml  service1.yaml
kubernetes/05-ingress/: ingress.yaml
kubernetes/10-multiple-services/: api-nodejs.yaml
kubernetes/11-deployment2/: api-go.yaml  api-nodejs.yaml  configmap.yaml  ingress.yaml  redis.yaml  secret.yaml
kubernetes/12-api-helm/: Chart.yaml  values.yaml
kubernetes/12-api-helm/templates/: api-nodejs.yaml  ingress.yaml
kubernetes/13-monitoring/: Chart.yaml  deploy.sh  values.yaml
kubernetes/13-monitoring/dashboards/: certs.json
kubernetes/13-monitoring/templates/: grafana-dashboards-configmap.yaml
kubernetes/14-redis/: deploy.sh
kubernetes/21-resources/: deploy.sh  load-cpu.sh  load-mem.sh  values.yaml
kubernetes/21-resources/templates/: api-go.yaml  api-nodejs.yaml
kubernetes/31-psp-api/: Chart.yaml  deploy.sh  values.yaml
kubernetes/31-psp-api/kubernetes/: psp-k8scamp-api.yaml
kubernetes/31-psp-api/templates/: api-go.yaml  api-nodejs.yaml  ingress.yaml  rbac.yaml
kubernetes/32-psp-nginx/: deploy.sh
kubernetes/41-cert-manager/: Chart.yaml  values.yaml
(+6 files in other folders)
